# unsloth-finetune-ec2

./: .env.template  .gitignore  GRPO_hf_model_unsloth.ipynb  README.md  SFT_hf_model_unsloth.ipynb  ec2_metrics.py  finetune_llama3_unsloth.ipynb  globals.py  problem1.ipynb  problem1_task1.txt  pyproject.toml
results/: ec2_metrics.csv  training_stats.txt
unsloth_training_sample.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
